--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,8 @@ djangotoolbox==1.8.0
 djongo==1.3.6
 dnspython==2.4.2
 kombu==5.3.2
-numpy==1.26.1
+#numpy==1.26.1
+numpy==1.23.0
 packaging==23.2
 pandas==2.1.2
 plotly==5.18.0
