--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
 cloudinary==1.36.0
+decorator==5.1.1
 dj-database-url==2.1.0
 Django==4.1.12
 django-dotenv==1.4.2
@@ -18,6 +19,7 @@ django-widget-tweaks==1.5.0
 djangotoolbox==1.8.0
 djongo==1.3.6
 dnspython==2.4.2
+gssapi==1.8.3
 kombu==5.3.2
 numpy==1.23.0
 packaging==23.2
