--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ async-timeout==4.0.3
 billiard==4.1.0
 celery==5.3.4
 certifi==2023.7.22
+charset-normalizer==3.3.2
 click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
@@ -20,6 +21,7 @@ djangotoolbox==1.8.0
 djongo==1.3.6
 dnspython==2.4.2
 gssapi==1.8.3
+idna==3.4
 kombu==5.3.2
 numpy==1.23.0
 packaging==23.2
@@ -33,6 +35,7 @@ python-dateutil==2.8.2
 python-snappy==0.6.1
 pytz==2023.3.post1
 redis==4.6.0
+requests==2.31.0
 six==1.16.0
 sqlparse==0.2.4
 tenacity==8.2.3
